--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="faq-items">
             <div class="faq-item active">
               <button
-                id="faq-item__question-1"
+                id="faq-item-question-1"
                 class="question"
                 onclick="showAnswer(event)"
               >
@@ -41,7 +41,7 @@
             </div>
             <div class="faq-item">
               <button
-                id="faq-item__question-2"
+                id="faq-item-question-2"
                 class="question"
                 onclick="showAnswer(event)"
               >
@@ -59,7 +59,7 @@
             </div>
             <div class="faq-item">
               <button
-                id="faq-item__question-3"
+                id="faq-item-question-3"
                 class="question"
                 onclick="showAnswer(event)"
               >
@@ -77,7 +77,7 @@
             </div>
             <div class="faq-item">
               <button
-                id="faq-item__question-4"
+                id="faq-item-question-4"
                 class="question"
                 onclick="showAnswer(event)"
               >
@@ -95,7 +95,7 @@
             </div>
             <div class="faq-item">
               <button
-                id="faq-item__question-5"
+                id="faq-item-question-5"
                 class="question"
                 onclick="showAnswer(event)"
               >
